# Atomic-Invest-Take-Home

./: README.md  RECON.md
.github/workflows/: refresh.yml
prospectus-fetcher/: .gitignore  DIAGNOSIS.md  Dockerfile  README.md  pyproject.toml  watchlist.txt
prospectus-fetcher/sample_run/: manifest.json  summary.csv  summary.json
prospectus-fetcher/sample_run/FDRXX/2026-01-26_485BPOS_000027800126000019/: prospectus.htm
prospectus-fetcher/sample_run/SPY/2026-01-26_485BPOS_000119312526022316/: prospectus.htm
prospectus-fetcher/src/prospectus_fetcher/: __init__.py  cli.py  download.py  edgar.py  errors.py  extract.py  filings.py  models.py  report.py  resolver.py  validate.py
prospectus-fetcher/src/prospectus_fetcher/edgar_cache/: company_tickers_mf.json
prospectus-fetcher/tests/: conftest.py  test_filings.py  test_resolver.py  test_smoke.py  test_url_builders.py  test_validate.py
prospectus-fetcher/tests/fixtures/: atom_series_S000002852.xml  company_tickers.json  company_tickers_mf.json  submissions_CIK0000891190.json
