[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prospectus-fetcher"
version = "0.1.0"
description = "CLI tool to retrieve the latest SEC fund prospectus for a given ticker from EDGAR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "typer>=0.12",
    "rich>=13.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
extract = [
    "anthropic>=0.26",
    "pydantic>=2.0",
]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[project.scripts]
prospectus-fetch = "prospectus_fetcher.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prospectus_fetcher"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
# Optional dependencies not installed in the type-checking environment.
module = ["anthropic", "anthropic.*", "pydantic", "pydantic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# extract.py dynamically imports the above optional packages; relax strict
# checks that can't be satisfied without them installed.
module = "prospectus_fetcher.extract"
warn_unused_ignores = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false
